add Colombian food images to home + menu

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
         <a href="contact.html">Contact</a>
     </nav>
     <header>
+<main class="hero">
+    <img src="images/arepas-hero.jpg" alt="Plateful of Colombian arepas" class="hero-image">
         <h1>🌮 Sabor Colombiano</h1>
         <p>Authentic Colombian cuisine in Chaska, Minnesota</p>
         <p>Arepas • Empanadas • Bandeja Paisa • Ajiaco • Patacones</p>
