--- a/menu.html
+++ b/menu.html
@@ -17,31 +17,37 @@
         <h2>Nuestro Menu</h2>
         <div class="menu-grid">
             <div class="menu-item">
+		<img src="images/arepas-hero.jpg" alt="Colombian arepas" class="dish-image">
                 <div class="placeholder-img">🥞</div>
                 <h3>Arepas</h3>
                 <p>$8.99</p>
             </div>
             <div class="menu-item">
+		<img src="images/empanada.jpg" alt="Colombian empanadas" class="dish-image">
                 <div class="placeholder-img">🌮</div>
                 <h3>Empanadas</h3>
                 <p>$6.50 ea</p>
             </div>
             <div class="menu-item">
+		<img src="images/bandeja.jpg" alt="Bandeja Paisa platter" class="dish-image">
                 <div class="placeholder-img">🍲</div>
                 <h3>Bandeja Paisa</h3>
                 <p>$18.99</p>
             </div>
             <div class="menu-item">
+		<img src="images/patacones.jpg" alt="Patacones fried plantains" class="dish-image">
                 <div class="placeholder-img">🍌</div>
                 <h3>Patacones</h3>
                 <p>$9.99</p>
             </div>
             <div class="menu-item">
+ 		<img src="images/ajiaco.jpg" alt="Ajiaco chicken soup" class="dish-image">
                 <div class="placeholder-img">🥘</div>
                 <h3>Ajiaco</h3>
                 <p>$12.99</p>
             </div>
             <div class="menu-item">
+		<img src="images/jugo.jpg" alt="Fresh Colombian juices" class="dish-image">
                 <div class="placeholder-img">🥭</div>
                 <h3>Jugos Naturales</h3>
                 <p>$5.99</p>
