finalize: Formspree + GitHub Pages + README

--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@
         (952) 555-1234<br>
         Abierto: Lunes-Domingo 11AM-8PM</p>
         
-        <form action="https://formspree.io/f/YOUR-ID" method="POST">
+        <form action="https://formspree.io/f/mwvlllll" method="POST">
             <input type="text" name="name" placeholder="Tu Nombre" required>
             <input type="email" name="email" placeholder="Tu Email" required>
             <textarea name="message" placeholder="Tu Mensaje" rows="5" required></textarea>
